# wasm_svg_map_drawer

./: Cargo.toml  LICENSE-APACHE  README.md
src/: lib.rs  utils.rs  worker.rs
www/: index.html  index.js  style.css  worker.js
